--- a/index.html
+++ b/index.html
@@ -322,6 +322,23 @@
 
                 <div class="projects-card-box">
                     <div class="projects-card-box__icons">
+                        <i class="fa-solid fa-cloud-sun me-2"></i>
+                    </div>
+                    <div class="projects-card-box__desc">
+                        <h4>SkyScope Live Weather Dashboard with API Integration</h4>
+                        <p align="justify">A fully interactive weather platform that delivers real-time forecasts, AQI metrics, and dynamic visual effects based on live conditions. Developed using JavaScript, Bootstrap, and Canvas animations, the app adapts its UI to weather and time of day, creating an engaging and responsive user experience.
+                        </p>
+                    </div>
+                    <div class="projects-card-box__buttons">
+                        <button class="btn btn-dark-outlined" title="View Project" tooltip-bottom>
+                            <a target="_blank" href="https://ankurkohli007.github.io/SkyScope-WeatherApp-JS_ResetFul-API/">View
+                                Project <i class="fa-solid fa-external-link"></i></a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="projects-card-box">
+                    <div class="projects-card-box__icons">
                         <i class="fa-solid fa-gamepad"></i>
                     </div>
                     <div class="projects-card-box__desc">
