updated abot me

--- a/allprojects.html
+++ b/allprojects.html
@@ -56,13 +56,13 @@
                         <i class="fa-solid fa-lightbulb"></i>
                     </div>
                     <div class="projects-card-box__desc">
-                        <h4>RSkyScope: Live Weather Dashboard with API Integration</h4>
+                        <h4>SkyScope: Live Weather Dashboard with API Integration</h4>
                         <p align="justify">A fully interactive weather platform that delivers real-time forecasts, AQI metrics, and dynamic visual effects based on live conditions. Developed using JavaScript, Bootstrap, and Canvas animations, the app adapts its UI to weather and time of day, creating an engaging and responsive user experience.
                         </p>
                     </div>
                     <div class="projects-card-box__buttons">
                         <button class="btn btn-dark-outlined" title="View Project" tooltip-bottom>
-                            <a target="_blank" href="https://ankurkohli007.github.io/SkyScope-WeatherApp-JS_ResetFul-API/">View
+                            <a target="_blank" href="https://ankurkohli007.github.io/SkyScope-WeatherApp-JS_RESTFul-API/">View
                                 Project <i class="fa-solid fa-external-link"></i></a>
                         </button>
                     </div>
