CV updated & CI

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
             <div class="career-content">
                 <h2>Career <span>Identity</span></h2>
                 <p align="justify">
-                    Aspiring Software Engineer with a strong foundation in Python, C/C++, Dart, Flutter, API driven
-                    client server development, Java, Bash, Powershell, & advanced technologies.
+                    Software Engineer with expertise in Python, C/C++, Dart, Flutter, Java, Bash, JavaScript, and API-driven distributed systems, focused on advanced technologies.
                 </p>
             </div>
 
