--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         </div>
                         <div class="certification-card__content">
                             <h3 class="certification-card__title">Azure Fundamentals</h3>
-                            <p class="certification-card__issuer">Google Cloud Platform</p>
+                            <p class="certification-card__issuer">Microsoft</p>
                             <p class="certification-card__date">November 2025</p>
                         </div>
                         <div class="certification-card__action">
