new project ResumeAI

--- a/index.html
+++ b/index.html
@@ -323,6 +323,24 @@
 
                 <div class="projects-card-box">
                     <div class="projects-card-box__icons">
+                        <i class="fa-solid fa-microchip me-2"></i>
+                    </div>
+                    <div class="projects-card-box__desc">
+                        <h4>ResumeAI: Next-Gen Career Intelligence Platform</h4>
+                        <p align="justify">An AI assisted resume analysis platform built with React.js, Tailwind CSS, and Puter.js, designed to provide cost efficient ATS style insights. The platform performs semantic resume job description matching, highlights skill gaps, and generates actionable improvement suggestions through GenAI integration, with a strong focus on accessibility for individuals and smaller teams.
+                        </p>
+                    </div>
+                    <div class="projects-card-box__buttons">
+                        <button class="btn btn-dark-outlined" title="View Project" tooltip-bottom>
+                            <a target="_blank"
+                                href="https://ankurkohli007.github.io/resumeai-platform/">View
+                                Project <i class="fa-solid fa-external-link"></i></a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="projects-card-box">
+                    <div class="projects-card-box__icons">
                         <i class="fa-solid fa-cloud-sun me-2"></i>
                     </div>
                     <div class="projects-card-box__desc">
