--- a/index.html
+++ b/index.html
@@ -199,6 +199,22 @@
                             <i class="fa-solid fa-certificate"></i>
                         </div>
                         <div class="certification-card__content">
+                            <h3 class="certification-card__title">Prompt Design in Vertex AI</h3>
+                            <p class="certification-card__issuer">Google Cloud</p>
+                            <p class="certification-card__date">February 2025</p>
+                        </div>
+                        <div class="certification-card__action">
+                            <a class="btn btn-cert" target="_blank" href="https://www.skills.google/public_profiles/63ace5e6-2287-48ff-aca5-064f86782cba/badges/21940294">
+                                View Certificate <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="certification-card">
+                        <div class="certification-card__icon">
+                            <i class="fa-solid fa-certificate"></i>
+                        </div>
+                        <div class="certification-card__content">
                             <h3 class="certification-card__title">Azure Fundamentals</h3>
                             <p class="certification-card__issuer">Microsoft</p>
                             <p class="certification-card__date">November 2025</p>
@@ -216,7 +232,7 @@
                         </div>
                         <div class="certification-card__content">
                             <h3 class="certification-card__title">Introduction to Responsible AI</h3>
-                            <p class="certification-card__issuer">Google Cloud Skills Boost</p>
+                            <p class="certification-card__issuer">Google Cloud</p>
                             <p class="certification-card__date">January 2025</p>
                         </div>
                         <div class="certification-card__action">
@@ -234,7 +250,7 @@
                         <div class="certification-card__content">
                             <h3 class="certification-card__title">Responsible AI: Applying AI Principles with Google
                                 Cloud</h3>
-                            <p class="certification-card__issuer">Google Cloud Skills Boost</p>
+                            <p class="certification-card__issuer">Google Cloud</p>
                             <p class="certification-card__date">January 2025</p>
                         </div>
                         <div class="certification-card__action">
@@ -267,7 +283,7 @@
                         </div>
                         <div class="certification-card__content">
                             <h3 class="certification-card__title">Introduction to Generative AI</h3>
-                            <p class="certification-card__issuer">Google Cloud Skills Boost</p>
+                            <p class="certification-card__issuer">Google Cloud</p>
                             <p class="certification-card__date">October 2024</p>
                         </div>
                         <div class="certification-card__action">
