--- a/index.html
+++ b/index.html
@@ -51,23 +51,28 @@
 
                     <ul class="lang-menu">
                         <li>
-                            <button type="button" onclick="setLang('en')" data-tooltip="English" tooltip-right>🇬🇧
+                            <button type="button" onclick="setLang('en')" data-tooltip="English" tooltip-right
+                                small-tooltip>🇬🇧
                                 English</button>
                         </li>
                         <li>
-                            <button type="button" onclick="setLang('it')" data-tooltip="Italiano" tooltip-right>🇮🇹
+                            <button type="button" onclick="setLang('it')" data-tooltip="Italiano" tooltip-right
+                                small-tooltip>🇮🇹
                                 Italiano</button>
                         </li>
                         <li>
-                            <button type="button" onclick="setLang('de')" data-tooltip="Deutsch" tooltip-right>🇩🇪
+                            <button type="button" onclick="setLang('de')" data-tooltip="Deutsch" tooltip-right
+                                small-tooltip>🇩🇪
                                 Deutsch</button>
                         </li>
                         <li>
-                            <button type="button" onclick="setLang('nl')" data-tooltip="Nederlands" tooltip-right>🇳🇱
+                            <button type="button" onclick="setLang('nl')" data-tooltip="Nederlands" tooltip-right
+                                small-tooltip>🇳🇱
                                 Nederlands</button>
                         </li>
                         <li>
-                            <button type="button" onclick="setLang('fr')" data-tooltip="Français" tooltip-right>🇫🇷
+                            <button type="button" onclick="setLang('fr')" data-tooltip="Français" tooltip-right
+                                small-tooltip>🇫🇷
                                 Français</button>
                         </li>
                     </ul>
