--- a/allprojects.html
+++ b/allprojects.html
@@ -405,13 +405,14 @@
     </main>
 
     <footer>
-        <p>Copyright &copy; 2025 - <a href="https://github.com/ankurkohli007" target="_blank">Ankur Kohli</a> - All
+        <p>Copyright &copy; 2026 - <a href="https://ankurkohli007.github.io/PORTFOLIO-ANKUR-on-HTML-CSS-and-JavaScript/" target="_blank">Ankur Kohli</a> - All
             Rights
             Reserved.</p>
-        <div class="footer-buttons">
-            <button data-theme="./css/style1.css" class="footer__theme1 active-theme">Style 1</button>
-            <button data-theme="./css/style2.css" class="footer__theme2">Style 2</button>
-        </div>
+        <!-- <div class="footer-buttons">
+            <button data-theme="./css/style1.css" class="footer__theme1 active-theme" title="Style 1" tooltip-top>Style
+                1</button>
+            <button data-theme="./css/style2.css" class="footer__theme2" title="Style 2" tooltip-top>Style 2</button>
+        </div> -->
 
     </footer>
 
