--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
     </main>
 
     <footer>
-        <p>Copyright &copy; 2025 - <a href="https://github.com/ankurkohli007" target="_blank">Ankur Kohli</a> - All
+        <p>Copyright &copy; 2026 - <a href="https://ankurkohli007.github.io/PORTFOLIO-ANKUR-on-HTML-CSS-and-JavaScript/" target="_blank">Ankur Kohli</a> - All
             Rights
             Reserved.</p>
         <!-- <div class="footer-buttons">
