--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#projects" title="Projects" tooltip-bottom small-tooltip>Projects</a></li>
                 <li><a href="#publications" title="Publications" tooltip-bottom small-tooltip>Publications</a></li>
                 <li><a href="#contact" title="Contact" tooltip-bottom small-tooltip>Contact</a></li>
-                <!-- setlang button -->>
+                <!-- setlang button -->
                 <li class="lang-switch lang-dropdown">
                     <div id="google_translate_element"></div>
 
