--- a/allprojects.html
+++ b/allprojects.html
@@ -37,7 +37,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <!-- setlang button -->>
+                <!-- setlang button -->
                 <li class="lang-switch lang-dropdown">
                     <div id="google_translate_element"></div>
 
