updated CV & career identity

--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
             <div class="career-content">
                 <h2>Career <span>Identity</span></h2>
                 <p align="justify">
-                    Software Engineer with expertise in Python, C/C++, Dart, Flutter, Java, Bash, JavaScript, and
-                    API-driven distributed systems, focused on advanced technologies.
+                    Software Engineer with expertise in Python, C/C++, JavaScript, ReactJS, Dart, Flutter, Java, Tailwind CSS & API driven distributed systems, focused on advanced technologies
                 </p>
             </div>
 
